--- a/ocp/slab_generation/read_lmdb_r.ipynb
+++ b/ocp/slab_generation/read_lmdb_r.ipynb
@@ -12,6 +12,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Procedure for results analysis after getting the slab energy and geometry, bulk energy and geometry."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -170,7 +178,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gpustudy",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -184,11 +192,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.8"
   },
   "vscode": {
    "interpreter": {
-    "hash": "07482723249349ed54e2c7e6c4dc9f336a0ae8a59ea3de954cec4c2faf28691e"
+    "hash": "76901b0c3267acff4215297c6e8edfa952941388b64ab8971ab5fb6aa1216054"
    }
   }
  },
