--- a/ocp/slab_generation/slabs.ipynb
+++ b/ocp/slab_generation/slabs.ipynb
@@ -32,6 +32,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# This document works for generate slab and calculate the slab energy by ml model, and save as .lmdb\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -1132,7 +1140,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ocp-models",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1146,12 +1154,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "482cce81d4c7a5b1dbf5abc53f3fa9c4c6232bf506eb7160f4dd39979dda3c51"
+    "hash": "76901b0c3267acff4215297c6e8edfa952941388b64ab8971ab5fb6aa1216054"
    }
   }
  },
