--- a/notebook_tutorials/lmdb_generator.ipynb
+++ b/notebook_tutorials/lmdb_generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "0a8a643b-490e-49d0-b6dd-e5c4fef498bd",
    "metadata": {},
    "outputs": [],
@@ -23,6 +23,201 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8773b83-3c30-4c60-8e5d-7723843903fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pymatgen.io.ase import AseAtomsAdaptor\n",
+    "from pymatgen.core.surface import Slab\n",
+    "from pymatgen.core.structure import Molecule\n",
+    "from pymatgen.util.coord import all_distances, pbc_shortest_vectors\n",
+    "from pymatgen.entries.computed_entries import ComputedStructureEntry\n",
+    "\n",
+    "from database.generate_metadata import write_metadata_json\n",
+    "from structure_generation.MXide_adsorption import MXideAdsorbateGenerator\n",
+    "\n",
+    "from ase.constraints import FixAtoms\n",
+    "from ase import Atoms\n",
+    "\n",
+    "import numpy as np\n",
+    "import json, copy\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "Metadata and additional API information for adsorbed slabs:\n",
+    "    entry_id (str): Materials Project ID of the corresponding bulk\n",
+    "    database (str): Materials database where the bulk was obtained from\n",
+    "    adsorbate (str): Name_of_adsorbate\n",
+    "    nads (int): Number of adsorbate molecules\n",
+    "    bulk_rid (str): 20 digit random ID of the corresponding bulk e.g. \n",
+    "        bulk-h4qfsgj3432kl113DVpD\n",
+    "    slab_rid (str): 20 digit random ID of the corresponding bare slab\n",
+    "        e.g. slab-t43frgfgy5lFh3f3CVGD\n",
+    "    ads_rid (str): 20 digit random ID of the corresponding gas phase \n",
+    "        reference of the adsorbate e.g. ads-a03Wlk2205GFXqu95ATs\n",
+    "    rid (str): 20 digit random ID of the adsorbed slab e.g. \n",
+    "        adslab-zx668jolRrGdhqwWqA47\n",
+    "    miller_index (tuple): Miller index of the facet \n",
+    "    bulk_formula (str): Reduced formula of the corresponding bulk \n",
+    "    bulk_composition (dict): Composition of the bulk with elements \n",
+    "        as keys and the number of atoms as values \n",
+    "    bulk_chemsys (str): Elemental components of the bulk e.g. for \n",
+    "        LiFe(PO4), the chemsys is 'Li-Fe-P-O'\n",
+    "    pmg_slab (dict): Pymatgen slab object as a dictionary. Contains useful \n",
+    "        information about miller index, scale factor, bulk wyckoff positions, etc. \n",
+    "    calc_type (str): What kidn of system is this calculation for \n",
+    "        ('bare_slab', 'adsorbed_slab', 'adsorbate_in_a_box', 'bulk') \n",
+    "    func (str): The DFT functional used or the method used to obtain the \n",
+    "        energy/relaxation data (Beef-vdW, PBE, PBEsol, rPBE, GemNet-OC (for ML) etc...)\n",
+    "\"\"\"\n",
+    "\n",
+    "from database import generate_metadata\n",
+    "f = generate_metadata.__file__\n",
+    "bulk_oxides_20220621 = json.load(open(f.replace(f.split('/')[-1], 'bulk_oxides_20220621.json'), 'rb'))\n",
+    "\n",
+    "# For slab saturation, \n",
+    "Ox = Molecule([\"O\"], [[0,0,0]])\n",
+    "OH = Molecule([\"O\",\"H\"], [[0,0,0], \n",
+    "                          np.array([0, 0.99232, 0.61263])/\\\n",
+    "                          np.linalg.norm(np.array([0, 0.99232, 0.61263]))*1.08540])\n",
+    "\n",
+    "def surface_adsorption(slab_data, functional='GemNet-OC', coverage_list=[1]):\n",
+    "    \"\"\"\n",
+    "    Gets all adsorbed slab for a slab. Will always return 6 adslabs, \n",
+    "        1 O* saturated slab and 5 OH saturated slabs. 4 of the OH  \n",
+    "        adslabs will have all OH molecules pointing in one of the 4 \n",
+    "        cardinal directions. 1 OH adslab will place OH* in such a way as \n",
+    "        to minimize the O-H bondlengths with all O* and surface O atoms.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # get bulk entry\n",
+    "    bulk_entry = [ComputedStructureEntry.from_dict(entry) for entry in bulk_oxides_20220621 \\\n",
+    "                  if entry['entry_id'] == slab_data.entry_id][0]\n",
+    "    \n",
+    "    # get pmg slab\n",
+    "    init_slab = Slab.from_dict(json.loads(slab_data.init_pmg_slab))\n",
+    "    \n",
+    "    # I am assuming the atomic_numbers, pos, and \n",
+    "    # cell are corresponding to the relaxed slab?\n",
+    "    # convert relaxed slab to Slab\n",
+    "    atoms = Atoms(slab_data.atomic_numbers,\n",
+    "                  positions=slab_data.pos,\n",
+    "                  tags=slab_data.tags,\n",
+    "                  cell=slab_data.cell.squeeze(), pbc=True)\n",
+    "    relaxed_slab = AseAtomsAdaptor.get_structure(atoms)\n",
+    "    relaxed_slab = Slab(relaxed_slab.lattice, relaxed_slab.species,\n",
+    "                        relaxed_slab.frac_coords, init_slab.miller_index,\n",
+    "                        init_slab.oriented_unit_cell, init_slab.shift, \n",
+    "                        init_slab.scale_factor, site_properties=init_slab.site_properties)\n",
+    "            \n",
+    "    mxidegen = MXideAdsorbateGenerator(relaxed_slab, positions=['MX_adsites'], \n",
+    "                                       selective_dynamics=True)\n",
+    "    adslabs = mxidegen.generate_adsorption_structures(OH, coverage_list=coverage_list,\n",
+    "                                                      consistent_rotation=True)\n",
+    "    for adslab in adslabs:\n",
+    "        setattr(adslab, 'adsorbate', 'OH')\n",
+    "    \n",
+    "    Ostar = mxidegen.generate_adsorption_structures(Ox, coverage_list=coverage_list, \n",
+    "                                                    consistent_rotation=True)\n",
+    "    for adslab in Ostar:\n",
+    "        setattr(adslab, 'adsorbate', 'O')\n",
+    "    adslabs.extend(Ostar)\n",
+    "\n",
+    "    if coverage_list == 'saturated':\n",
+    "        OHstar = max_OH_interaction_adsorption(mxidegen)\n",
+    "        setattr(OHstar, 'adsorbate', 'OH')\n",
+    "        adslabs.append(OHstar)\n",
+    "    \n",
+    "    # Build list of Atoms objects\n",
+    "    adslab_atoms = []\n",
+    "    for adslab in adslabs:\n",
+    "        \n",
+    "        # name adsorbates\n",
+    "        if adslab.adsorbate == 'O':\n",
+    "            nads = len([site for site in adslab if site.surface_properties == 'adsorbate'])\n",
+    "        elif adslab.adsorbate == 'OH':\n",
+    "            nads = len([site for site in adslab if site.surface_properties == 'adsorbate'])/2\n",
+    "\n",
+    "        if 'ads_coord' in adslab.site_properties.keys():\n",
+    "            adslab.remove_site_property('ads_coord')\n",
+    "        new_tags = [] \n",
+    "        for site in adslab:\n",
+    "            if site.tag == None:\n",
+    "                new_tags.append(2)\n",
+    "            elif site.frac_coords[2] < 0.5:\n",
+    "                new_tags.append(0)\n",
+    "            else:\n",
+    "                new_tags.append(site.tag)\n",
+    "        adslab.add_site_property('tag', new_tags)\n",
+    "\n",
+    "        # get metadata \n",
+    "        database = 'MP' if 'mp-' in bulk_entry.entry_id else None\n",
+    "        metadata = write_metadata_json(adslab, 'adsorbed_slab', bulk_entry, \n",
+    "                                       name_of_adsorbate=adslab.adsorbate,\n",
+    "                                       database=database, slab_rid=slab_data.rid,\n",
+    "                                       functional=functional, additional_data={'nads': nads})\n",
+    "        \n",
+    "        # ASE Atoms object format, set up selective dynamics so  \n",
+    "        # that only the top surface and adsorbate relax this time\n",
+    "        atoms = AseAtomsAdaptor.get_atoms(adslab, **{'info': metadata})\n",
+    "        atoms.set_tags(new_tags)\n",
+    "        atoms.set_constraint(FixAtoms([i for i, site in enumerate(adslab) if site.tag == 0]))\n",
+    "        adslab_atoms.append(atoms)\n",
+    "    \n",
+    "    return adslab_atoms\n",
+    "\n",
+    "def max_OH_interaction_adsorption(mxidegen, incr=100):\n",
+    "    \"\"\"\n",
+    "    Algorithm to saturate a surface with OH by rotating all OH \n",
+    "        molecules in such a way to minimize H-O bondlengths \n",
+    "        between H* and all surface O and O* sites. This minimization \n",
+    "        will hopefully get us a relatively stable config for adsorption.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Get all surface O sites and potential O* sites\n",
+    "    surf_Osites = copy.copy(mxidegen.MX_adsites)\n",
+    "    for site in mxidegen.slab:\n",
+    "        if all([site.surface_properties == 'surface', \n",
+    "                site.frac_coords[-1] > 0.5, site.species_string == 'O']):\n",
+    "            surf_Osites.append(site.coords)\n",
+    "\n",
+    "    satslab = mxidegen.slab.copy()\n",
+    "    for coord in mxidegen.MX_adsites:\n",
+    "\n",
+    "        transformed_ads_list = mxidegen.get_transformed_molecule_MXides\\\n",
+    "        (OH, [np.deg2rad(deg) for deg in np.linspace(0, 360, incr)])\n",
+    "\n",
+    "        all_OH_ave_dists = []\n",
+    "        for i, mol in enumerate(transformed_ads_list):\n",
+    "            slab = mxidegen.slab.copy()\n",
+    "            for site in mol:\n",
+    "                slab.append(site.species, coord+site.coords, coords_are_cartesian=True)\n",
+    "\n",
+    "            shortest_vect = pbc_shortest_vectors(slab.lattice, slab[-1].frac_coords, \n",
+    "                                                 [slab.lattice.get_fractional_coords(c) \\\n",
+    "                                                  for c in surf_Osites])\n",
+    "            all_OH_dists = []\n",
+    "            for i, c in enumerate(surf_Osites):\n",
+    "                # Get all distances between the H site of the adsorbate\n",
+    "                # and its surrrounding O sites at the surface\n",
+    "                all_OH_dists.append(all_distances([slab[-1].coords+shortest_vect[0][i]],\n",
+    "                                                  [slab[-1].coords])[0][0])\n",
+    "            all_OH_ave_dists.append(np.mean(all_OH_dists))\n",
+    "\n",
+    "        all_OH_ave_dists, transformed_ads_list = zip(*sorted(zip(all_OH_ave_dists, \n",
+    "                                                                 transformed_ads_list)))\n",
+    "\n",
+    "        for site in transformed_ads_list[0]:\n",
+    "            satslab.append(site.species, site.coords+coord, coords_are_cartesian=True, \n",
+    "                           properties={'tag': 2, 'surface_properties': 'adsorbate',\n",
+    "                                       'selective_dynamics': [True, True, True]})\n",
+    "\n",
+    "    return satslab"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "32feab74-5cfe-4c69-b65d-af53ab466ce0",
    "metadata": {},
@@ -32,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "7b6d83dd-e7eb-457e-86da-e40b544888d5",
    "metadata": {},
    "outputs": [],
@@ -52,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "cc215eae-961f-463a-b408-7fc65f194db1",
    "metadata": {
     "tags": []
@@ -62,7 +257,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found total adsites: 1 for slab of 112 atoms in 0.102 secs\n",
+      "Found total adsites: 1 for slab of 112 atoms in 0.116 secs\n",
+      "# adsites =  1\n",
       "coverage 1\n",
       "partition_combos (0,) Total combos 4\n",
       "groups 4 combinations into 4 groups\n",
@@ -89,13 +285,64 @@
       "symmetrically reduced to 1 adslabs from 1\n",
       "removed 0.0 adsorbates! original coverage 1\n",
       "sorting 1 adslabs, completed 0/1 iterations\n",
-      "6\n"
+      "For single adsorbate 5\n",
+      "Found total adsites: 1 for slab of 112 atoms in 0.102 secs\n",
+      "# adsites =  1\n",
+      "coverage 1\n",
+      "partition_combos (0,) Total combos 4\n",
+      "groups 4 combinations into 4 groups\n",
+      "grouped 1 sites to 1\n",
+      "symmetrically reduced to 1 adslabs from 1\n",
+      "removed 0.0 adsorbates! original coverage 1\n",
+      "sorting 1 adslabs, completed 0/4 iterations\n",
+      "grouped 1 sites to 1\n",
+      "symmetrically reduced to 1 adslabs from 1\n",
+      "removed 0.0 adsorbates! original coverage 1\n",
+      "sorting 2 adslabs, completed 1/4 iterations\n",
+      "grouped 1 sites to 1\n",
+      "symmetrically reduced to 1 adslabs from 1\n",
+      "removed 0.0 adsorbates! original coverage 1\n",
+      "sorting 3 adslabs, completed 2/4 iterations\n",
+      "grouped 1 sites to 1\n",
+      "symmetrically reduced to 1 adslabs from 1\n",
+      "removed 0.0 adsorbates! original coverage 1\n",
+      "sorting 4 adslabs, completed 3/4 iterations\n",
+      "coverage 1\n",
+      "partition_combos (0,) Total combos 1\n",
+      "groups 1 combinations into 1 groups\n",
+      "grouped 1 sites to 1\n",
+      "symmetrically reduced to 1 adslabs from 1\n",
+      "removed 0.0 adsorbates! original coverage 1\n",
+      "sorting 1 adslabs, completed 0/1 iterations\n",
+      "For saturated 5\n"
      ]
     }
    ],
    "source": [
     "dat = bare_slab_dataset[0]\n",
-    "adslabs = surface_adsorption_saturation(dat)\n",
+    "\n",
+    "adslabs = surface_adsorption(dat, coverage_list='saturated')\n",
+    "print('For saturated', len(adslabs))\n",
+    "\n",
+    "adslabs = surface_adsorption(dat)\n",
+    "print('For single adsorbate', len(adslabs))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b77e50d-3600-40e2-a505-62961c9cae6a",
+   "metadata": {},
+   "source": [
+    "# Number of adslabs you should have should equal N adsites (O*) + N adsites x 4 (OH*) if you are placing adsorbates one at a time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f9b6fa5a-9ebf-45b8-bb06-e5ce3e5c9c3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(len(adslabs))\n",
     "generate_lmdb(adslabs, 'test_ads.lmdb')\n",
     "adslab_dataset = LmdbDataset({'src': 'test_ads.lmdb'})"
