Fit for multi-GPU
fit for multi-GPU

--- a/Transformer.ipynb
+++ b/Transformer.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\lhuang37\\.conda\\envs\\ocp-models\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch \n",
     "import torch.nn as nn\n",
@@ -22,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,12 +70,14 @@
     "    def forward(self,data):\n",
     "\n",
     "        E_all=data.latent\n",
+    "        \n",
     " \n",
     "        batch = data.batch\n",
     "        # print(batch)\n",
     "        q=self.lin_query_MHA(E_all)\n",
     "        k=self.lin_key_MHA(E_all)\n",
     "        v=self.lin_value_MHA(E_all)\n",
+    "        # self.check_shape(q)\n",
     "\n",
     "        nMolecules = torch.max(batch) + 1\n",
     "        E_t,w=self.MHA(q,k,v)\n",
@@ -92,8 +85,10 @@
     "        E_t=torch.sum(E_t,dim=0)\n",
     "        # self.check_shape(E_t)\n",
     "        E_t = self.layer_norm(E_t)\n",
-    "        # self.check_shape(E_t)\n",
-    "        \n",
+    "        self.check_shape(E_t)\n",
+    "        E_t=torch.unsqueeze(E_t,dim=0)\n",
+    "        self.check_shape(E_t)\n",
+    "        E_t = E_t.permute(1, 0, 2)\n",
     "        E_t = scatter(\n",
     "                E_t, batch, dim=0, dim_size=nMolecules, reduce=\"add\"\n",
     "            )  # (nMolecules, num_targets)\n",
@@ -109,28 +104,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "DEVICE='cuda'\n",
+    "from tqdm import tqdm\n",
     "def out_fn(dataloader,model):\n",
-    "\n",
-    "    model.eval()    \n",
+    "    model.eval()       \n",
     "    with torch.no_grad():\n",
-    "        for data in dataloader:\n",
-    "            \n",
+    "        for data in tqdm(dataloader):\n",
     "            data=data.to(DEVICE)  \n",
     "            model=model.to(DEVICE) \n",
-    "            output=model(data)\n",
+    "            output=model(data)            \n",
     "            break\n",
-    "            \n",
-    "    return output "
+    "    return output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,40 +132,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Tensor shape is: torch.Size([1, 64])\n",
-      "The Tensor mean and std of is: tensor(-1.0133e-06, device='cuda:0') tensor(54.8691, device='cuda:0')\n",
-      "The Tensor shape is: torch.Size([1, 1])\n",
-      "The Tensor mean and std of is: tensor(0.6330, device='cuda:0') tensor(nan, device='cuda:0')\n"
+      "total no. of batches in trainloader:1523\n",
+      "total no. of batches in trainloader:381\n"
      ]
     }
    ],
    "source": [
     "from ocpmodels.datasets import LmdbDataset\n",
-    "dataset=LmdbDataset({\"src\":\"Data/eoh_t.lmdb\"})\n",
+    "from torch.utils.data import random_split\n",
     "import torch_geometric.loader as geom_loader\n",
-    "node_data_loader = geom_loader.DataLoader(dataset, batch_size=1)\n",
-    "output=out_fn(node_data_loader,myTransformer)"
+    "dataset=LmdbDataset({\"src\":\"Data/eoh_t.lmdb\"})\n",
+    "\n",
+    "\n",
+    "train_length = int(0.8 * len(dataset))\n",
+    "val_length = len(dataset) - train_length\n",
+    "\n",
+    "# Split the dataset into train and validation\n",
+    "train_dataset, val_dataset =random_split(dataset, [train_length, val_length])\n",
+    "# train_dataset=ReverseDataset(train_dataset,train_length)\n",
+    "# val_dataset=ReverseDataset(val_dataset,val_length)\n",
+    "train_loader = geom_loader.DataLoader(train_dataset, batch_size=1)\n",
+    "val_loader = geom_loader.DataLoader(val_dataset, batch_size=1)\n",
+    "print(f'total no. of batches in trainloader:{len(train_loader)}')\n",
+    "print(f'total no. of batches in trainloader:{len(val_loader)}')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/1523 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Tensor shape is: torch.Size([110, 64])\n",
+      "The Tensor mean and std of is: tensor(2.1674e-09, device='cuda:0') tensor(1.0001, device='cuda:0')\n",
+      "The Tensor shape is: torch.Size([1, 110, 64])\n",
+      "The Tensor mean and std of is: tensor(2.1674e-09, device='cuda:0') tensor(1.0001, device='cuda:0')\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "output=out_fn(train_loader,myTransformer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(torch.Size([1, 1]), tensor([[0.6330]], device='cuda:0'))"
+       "(torch.Size([1, 1, 1]), tensor([[[45.7582]]], device='cuda:0'))"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
