update the preprocessing

--- a/self_Transformer.ipynb
+++ b/self_Transformer.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\lhuang37\\.conda\\envs\\ocp-models\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch \n",
     "import torch.nn as nn\n",
@@ -27,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Gemformer(nn.Module):\n",
+    "class Sgemformer(nn.Module):\n",
     "    '''This is a Graph Transformer neural network, \n",
     "    the input is the Gemnet-oc latent space with the best pre-trained params\n",
     "    \n",
@@ -37,7 +46,7 @@
     "    '''\n",
     "\n",
     "    def __init__(self,num_heads,emb_size_in,emb_size_trans,out_layer1=32,out_layer2=1):\n",
-    "        super(Gemformer, self).__init__()\n",
+    "        super(Sgemformer, self).__init__()\n",
     "        self.num_heads=num_heads\n",
     "        \n",
     "        self.out_layer1=out_layer1\n",
