--- a/pre_process.ipynb
+++ b/pre_process.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\lhuang37\\.conda\\envs\\ocp-models\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "ERROR:root:Invalid setup for SCN. Either the e3nn library or Jd.pt is missing.\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Copyright (c) Facebook, Inc. and its affiliates.\n",
@@ -31,7 +41,7 @@
     "    scatter_det\n",
     "    \n",
     ")\n",
-    "\n",
+    "from ocpmodels.datasets import LmdbDataset\n",
     "from ocpmodels.modules.scaling.compat import load_scales_compat\n",
     "\n",
     "from ocpmodels.models.gemnet_oc.initializers import get_initializer\n",
@@ -71,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,6 +352,7 @@
     "        batch = data.batch\n",
     "        atomic_numbers = data.atomic_numbers.long()\n",
     "        num_atoms = atomic_numbers.shape[0]\n",
+    "        \n",
     "\n",
     "        if self.regress_forces and not self.direct_forces:\n",
     "            pos.requires_grad_(True)\n",
@@ -357,7 +368,7 @@
     "            trip_idx_e2a,\n",
     "            quad_idx,\n",
     "        ) = self.get_graphs_and_indices(data)\n",
-    "        print('checkpoint1')\n",
+    "        # print('checkpoint1')\n",
     "        _, idx_t = main_graph[\"edge_index\"]\n",
     "\n",
     "        (\n",
@@ -380,7 +391,7 @@
     "            quad_idx=quad_idx,\n",
     "            num_atoms=num_atoms,\n",
     "        )\n",
-    "        print('checkpoint2')\n",
+    "        # print('checkpoint2')\n",
     "\n",
     "        # Embedding block\n",
     "        h = self.atom_emb(atomic_numbers)\n",
@@ -389,7 +400,7 @@
     "        # (nEdges, emb_size_edge)\n",
     "\n",
     "        x_E, x_F = self.out_blocks[0](h, m, basis_output, idx_t)\n",
-    "        print(x_E.shape)\n",
+    "        # print(x_E.shape)\n",
     "        xs_E, xs_F = [x_E], [x_F]\n",
     "        # (nAtoms, num_targets), (nEdges, num_targets)\n",
     "        for i in range(self.num_blocks):\n",
@@ -471,7 +482,7 @@
     "        #     xs_E.append(x_E)\n",
     "        #     xs_F.append(x_F)\n",
     "        if self.latent:\n",
-    "            print('checkpoint3')\n",
+    "            # print('checkpoint3')\n",
     "            return E_all\n",
     "        else:\n",
     "#-----------------------------------------------------------------------------------------------------------------------------                \n",
@@ -536,18 +547,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:Unrecognized arguments: ['latent']\n",
+      "c:\\Users\\lhuang37\\.conda\\envs\\ocp-models\\lib\\site-packages\\torch\\nn\\init.py:405: UserWarning: Initializing zero-element tensors is a no-op\n",
+      "  warnings.warn(\"Initializing zero-element tensors is a no-op\")\n"
+     ]
+    }
+   ],
    "source": [
     "myGemnet=Transfer_Gem(0,0,0,latent='True')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "checkpoint_path='params/gemnet_oc_base_oc20_oc22.pt'\n",
     "pretrained_state_dict = torch.load(checkpoint_path)\n",
@@ -559,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +619,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import lmdb\n",
+    "import pickle\n",
+    "def lmdb_add_info(data, pathname: str):\n",
+    "    \"\"\"\n",
+    "    atoms_list:: Can be either a list of atoms objects or list of Data objects\n",
+    "    \"\"\"\n",
+    "    pathname = pathname + '.lmdb' if '.lmdb' not in pathname else pathname\n",
+    "    db = lmdb.open(\n",
+    "        pathname,\n",
+    "        map_size=1099511626 * 3,\n",
+    "        subdir=False,\n",
+    "        meminit=False,\n",
+    "        map_async=True,\n",
+    "    ) \n",
+    "    del data.edge_index\n",
+    "    del data.cell_offsets\n",
+    "    txn = db.begin(write=True)        \n",
+    "    length=txn.stat()['entries']        \n",
+    "    txn.put(f\"{length}\".encode('ascii'), pickle.dumps(data, protocol=0))\n",
+    "    txn.commit()\n",
+    "    db.sync()\n",
+    "    db.close() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,52 +666,77 @@
     "\n",
     "    model.eval()    \n",
     "    with torch.no_grad():\n",
-    "        for data in dataloader:\n",
-    "            \n",
+    "        for data in dataloader:            \n",
     "            data=data.to(DEVICE)  \n",
     "            model=model.to(DEVICE) \n",
     "            output=model(data)\n",
     "            data=data.cpu()\n",
     "            data.latent=output.cpu()\n",
-    "            generate_lmdb(data,pathname)"
+    "            del data.edge_index\n",
+    "            del data.cell_offsets\n",
+    "            lmdb_add_info(data,pathname)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Data(edge_index=[2, 2790], pos=[58, 3], cell=[1, 3, 3], atomic_numbers=[58], natoms=58, fixed=[58], tags=[58], nads=1, y_relaxed=-1.8839389085769653, pos_relaxed=[58, 3], sid=82967, id='0_85', oc22=1, cell_offsets=[2790, 3])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from ocpmodels.datasets import LmdbDataset\n",
-    "\n",
-    "dataset=LmdbDataset({\"src\":\"Data/eoh.lmdb\"})\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "dataset=LmdbDataset({\"src\":\"Data/eoh.lmdb\"})\n",
     "dataset[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\lhuang37\\.conda\\envs\\ocp-models\\lib\\site-packages\\torch_geometric\\deprecation.py:12: UserWarning: 'data.DataLoader' is deprecated, use 'loader.DataLoader' instead\n",
+      "  warnings.warn(out)\n"
+     ]
+    }
+   ],
    "source": [
     "import torch_geometric.data as geom_data\n",
-    "node_data_loader = geom_data.DataLoader(dataset, batch_size=1)\n",
-    "sv_path='Data/eoh_t.lmdb'\n"
+    "node_data_loader = geom_data.DataLoader(dataset, batch_size=16)\n",
+    "sv_path='Data/eoh_c.lmdb'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "MapFullError",
+     "evalue": "mdb_put: MDB_MAP_FULL: Environment mapsize limit reached",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mMapFullError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\lhuang37\\Desktop\\Shell_trans\\Shell_repo\\pre_process.ipynb Cell 13\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/lhuang37/Desktop/Shell_trans/Shell_repo/pre_process.ipynb#X15sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m out_fn(node_data_loader,myGemnet,sv_path)\n",
+      "\u001b[1;32mc:\\Users\\lhuang37\\Desktop\\Shell_trans\\Shell_repo\\pre_process.ipynb Cell 13\u001b[0m in \u001b[0;36mout_fn\u001b[1;34m(dataloader, model, pathname)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/lhuang37/Desktop/Shell_trans/Shell_repo/pre_process.ipynb#X15sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mdel\u001b[39;00m data\u001b[39m.\u001b[39medge_index\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/lhuang37/Desktop/Shell_trans/Shell_repo/pre_process.ipynb#X15sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mdel\u001b[39;00m data\u001b[39m.\u001b[39mcell_offsets\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/lhuang37/Desktop/Shell_trans/Shell_repo/pre_process.ipynb#X15sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m lmdb_add_info(data,pathname)\n",
+      "\u001b[1;32mc:\\Users\\lhuang37\\Desktop\\Shell_trans\\Shell_repo\\pre_process.ipynb Cell 13\u001b[0m in \u001b[0;36mlmdb_add_info\u001b[1;34m(data, pathname)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/lhuang37/Desktop/Shell_trans/Shell_repo/pre_process.ipynb#X15sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m txn \u001b[39m=\u001b[39m db\u001b[39m.\u001b[39mbegin(write\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)        \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/lhuang37/Desktop/Shell_trans/Shell_repo/pre_process.ipynb#X15sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m length\u001b[39m=\u001b[39mtxn\u001b[39m.\u001b[39mstat()[\u001b[39m'\u001b[39m\u001b[39mentries\u001b[39m\u001b[39m'\u001b[39m]        \n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/lhuang37/Desktop/Shell_trans/Shell_repo/pre_process.ipynb#X15sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m txn\u001b[39m.\u001b[39;49mput(\u001b[39mf\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m{\u001b[39;49;00mlength\u001b[39m}\u001b[39;49;00m\u001b[39m\"\u001b[39;49m\u001b[39m.\u001b[39;49mencode(\u001b[39m'\u001b[39;49m\u001b[39mascii\u001b[39;49m\u001b[39m'\u001b[39;49m), pickle\u001b[39m.\u001b[39;49mdumps(data, protocol\u001b[39m=\u001b[39;49m\u001b[39m0\u001b[39;49m))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/lhuang37/Desktop/Shell_trans/Shell_repo/pre_process.ipynb#X15sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m txn\u001b[39m.\u001b[39mcommit()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/lhuang37/Desktop/Shell_trans/Shell_repo/pre_process.ipynb#X15sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m db\u001b[39m.\u001b[39msync()\n",
+      "\u001b[1;31mMapFullError\u001b[0m: mdb_put: MDB_MAP_FULL: Environment mapsize limit reached"
+     ]
+    }
+   ],
    "source": [
     "out_fn(node_data_loader,myGemnet,sv_path)"
    ]
